--- a/gyomroote-web/src/App.css
+++ b/gyomroote-web/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
 	width: 100vw;
 	height: 100vh;
 	background: #fff;
@@ -170,22 +170,9 @@ body {
 	font-family: "Open Sans", sans-serif;
 }
 
-/* .chat-window .chat-footer button {
-	border: 0;
-	display: grid;
-	place-items: center;
-	cursor: pointer;
-	flex: 15%;
-	height: 100%;
-	background: transparent;
-	outline: none;
-	font-size: 25px;
-	color: lightgray;
-} */
-
 .chat-window .chat-footer button:hover {
 	color: #43a047;
 }
 .hide {
 	opacity: 0 !important;
-}
+} */
