--- a/gyomroote-web/src/index.css
+++ b/gyomroote-web/src/index.css
@@ -1,3 +1,9 @@
+@import url("./styles/sass/base/_typography.scss");
+
+body {
+	font-family: "Quicksand", sans-serif !important;
+}
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
