--- a/gyomroote-web/src/styles/sass/base/_typography.scss
+++ b/gyomroote-web/src/styles/sass/base/_typography.scss
@@ -1,1 +1,1 @@
-//This file you will create your rule of typographys inside of the project
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
