--- a/gyomroote-web/src/styles/sass/abstracts/_variables.scss
+++ b/gyomroote-web/src/styles/sass/abstracts/_variables.scss
@@ -1,1 +1,4 @@
-//This file you will create your variables inside of the project
+@use "../base/colors" as colors;
+
+$border: 2px solid colors.$border;
+$border-radius: 15px;
