--- a/gyomroote-web/src/views/Home/HomeView.scss
+++ b/gyomroote-web/src/views/Home/HomeView.scss
@@ -1,1 +1,16 @@
-﻿
+﻿.home-body {
+	padding: 5rem 0;
+
+	.hero-text-container {
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.hero-text-title {
+		font-size: 3rem;
+		font-weight: bold;
+		text-align: center;
+	}
+}
