--- a/gyomroote-web/src/components/Footer/Footer.scss
+++ b/gyomroote-web/src/components/Footer/Footer.scss
@@ -6,4 +6,8 @@ footer {
 	border-radius: var.$border-radius;
 	box-shadow: colors.$shadow;
 	background-image: colors.$dark-gradient;
+
+	ul {
+		border-bottom: var.$border !important;
+	}
 }
