--- a/gyomroote-web/src/styles/sass/base/_colors.scss
+++ b/gyomroote-web/src/styles/sass/base/_colors.scss
@@ -4,7 +4,8 @@ $secondary: #f2f2f2;
 $text: #f0f0f0;
 $text-secondary: #393939;
 $opacity: 0.1;
-$darkish-red: linear-gradient(135deg, #e95b5b 5%, #541d1d 89%);
+$darkish-red-gradient: linear-gradient(135deg, #e95b5b 5%, #541d1d 89%);
+$firewatch-gradient: linear-gradient(to right, #cb2d3e, #ef473a);
 $dark-gradient: linear-gradient(168deg, #222222 5%, #252525 61%);
 $shadow: rgb(0 0 0 / 20%) 0px 2px 8px 0px;
 $border: #2e2e2e;
