--- a/gyomroote-web/src/styles/sass/components/_dropdown.scss
+++ b/gyomroote-web/src/styles/sass/components/_dropdown.scss
@@ -2,11 +2,15 @@
 @use "../abstracts/variables" as var;
 
 .dropdown-menu {
-	border: var.$border;
-	border-radius: var.$border-radius;
-	box-shadow: colors.$shadow;
-	background-image: colors.$dark-gradient;
+	border: var.$border !important;
+	border-radius: var.$border-radius !important;
+	box-shadow: colors.$shadow !important;
+	background-image: colors.$dark-gradient !important;
 	background: transparent !important;
+
+	@media screen and (min-width: 768px) {
+		margin-top: 10px !important;
+	}
 
 	a {
 		color: colors.$text !important;
@@ -17,31 +21,27 @@
 			column-gap: 1vh;
 		}
 	}
-}
 
-.dropdown-item,
-.dropdown-item {
-	transition: all 0.3s ease-in-out;
-}
+	.dropdown-item,
+	.dropdown-item {
+		transition: all 0.3s ease-in-out;
+	}
 
-.dropdown-item:focus,
-.dropdown-item:hover {
-	color: colors.$primary !important;
-	background-color: colors.$text !important;
-	border-radius: var.$border-radius !important;
-	transition: all 0.3s ease-in-out;
-}
+	.dropdown-item div {
+		padding: 5px !important;
+		border-radius: 10px !important;
+	}
 
-.dropdown .dropdown-menu {
-	display: block;
-	opacity: 0;
-	-webkit-transition: all 200ms ease-in;
-	-moz-transition: all 200ms ease-in;
-	-ms-transition: all 200ms ease-in;
-	-o-transition: all 200ms ease-in;
-	transition: all 200ms ease-in;
-}
-.dropdown:hover .dropdown-menu {
-	display: block;
-	opacity: 1;
+	.dropdown-item div:focus,
+	.dropdown-item div:hover {
+		color: colors.$primary !important;
+		background-color: colors.$text !important;
+
+		transition: all 0.3s ease-in-out;
+	}
+
+	.dropdown-item:focus,
+	.dropdown-item:hover {
+		background-color: transparent !important;
+	}
 }
