--- a/gyomroote-web/src/views/Home/HomeView.scss
+++ b/gyomroote-web/src/views/Home/HomeView.scss
@@ -1,16 +1,53 @@
-﻿.home-body {
-	padding: 5rem 0;
+﻿@use "../../styles/sass/abstracts/mixins" as mixins;
+@use "../../styles/sass/abstracts/variables" as var;
+@use "../../styles/sass/base/colors" as colors;
 
+.home-body {
 	.hero-text-container {
 		display: flex;
 		justify-content: center;
 		flex-direction: column;
 		align-items: center;
+		row-gap: 1.8vh;
+		padding: 8rem;
 	}
 
 	.hero-text-title {
+		@include mixins.text-linear-gradient(
+			#cb2d3e,
+			colors.$firewatch-gradient
+		);
 		font-size: 3rem;
 		font-weight: bold;
 		text-align: center;
+		line-height: 1.2;
+	}
+
+	.hero-text-description {
+		text-align: center;
+
+		@media screen and (min-width: 1024px) {
+			& {
+				width: 50rem;
+			}
+		}
+
+		@media screen and (min-width: 768px) and (max-width: 1023px) {
+			& {
+				width: 40rem;
+			}
+		}
+
+		@media screen and (min-width: 575px) and (max-width: 767px) {
+			& {
+				width: 35rem;
+			}
+		}
+
+		@media screen and (max-width: 574px) {
+			& {
+				width: 25rem;
+			}
+		}
 	}
 }
